<resources>
    <string name="app_name">ABA</string>
    <string name="huruf">Huruf</string>
    <string name="angka">Angka</string>
    <string name="latihan_menyusun">Latihan Menyusun Huruf</string>
    <string name="orangtua">untuk Orang Tua</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="username">Nama</string>
    <string name="belajar_huruf">Belajar Huruf</string>
    <string name="kategori1">Mudah</string>
    <string name="kategori2">Sedang</string>
    <string name="kategori3">Sulit</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="kata">Kata</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_home">Home</string>

    <string name="text_1">Hello Guys!</string>

    <string name="text_2"><br>Nice to meet you, Lets start learning!\n</br><br>Login if you already have an account.\n</br><br>Register to get started with the app.\n</br></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="image1">imageview1</string>

    <string name="input_name">Your Name</string>
    <string name="input_email">Your Email</string>
    <string name="input_password">Your Password</string>
    <string name="input_description">What would you like to share?</string>
    <string name="input_info_password">Type a password of at least 6 characters</string>
    <string name="input_error_password">Less than 6 characters</string>
    <string name="input_error_email">Invalid email entered</string>
    <string name="input_error_empty">Please fill out this field</string>
    <string name="input_error_image">Please insert the file</string>

    <string name="button_register">Register</string>
    <string name="button_login">Login</string>

    <string name="login_description">Let\'s continue the story with the others</string>
    <string name="register_description">Sudah siap untuk belajar sesuatu? Mari kita mulai!</string>


    <string name="content_description_ic_login">Image login</string>
    <string name="content_description_ic_register">Image register</string>
    <string name="btn_logout">Logout</string>
    <string name="menyusun_kata">Latihan Menyusun Kata</string>
    <string name="level1">Level 1</string>
    <string name="level1.1">Level 1.1</string>
    <string name="level1.2">Level 1.2</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="menyusun_huruf">Latihan Menyusun Huruf</string>

    <string name="statistik">Statistik Pembelajaran!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pencapaian">Statistik Pencapaian</string>

    <string name="progres">Progres</string>
    <string name="progres2">Capaian huruf yang telah anda selesaikan.</string>
    <string name="skor">Total Skor</string>
    <string name="skor2">Total skor yang diraih.</string>
    <string name="susun">Susun Huruf</string>
    <string name="susun2">Total susunan huruf yang sudah dipahami.</string>
    <string name="katakata">Kata</string>
    <string name="kata2">Total kata yang sudah dipahami.</string>
    <string name="hurufhurf">Huruf</string>
    <string name="huruf2">Total susunan huruf yang sudah dipahami.</string>
    <string name="profile">Profile</string>
    <string name="mengeja">Latihan Mengeja Huruf</string>
    <string name="hentikan_rekaman">Hentikan Rekaman</string>
    <string name="rekam">Rekam</string>
    <string name="putar">Putar</string>
    <string name="ulangi">Ulangi</string>
    <string name="lihat_hasil">Lihat Hasil</string>
    <string name="hasil_benar"><br>Hore, \n</br><br>Kamu Benar!</br></string>

    <string name="hasil_salah"><br>Yahh,\n</br><br>Kamu Belum Benar,\n</br><br>Yuk Ulangi lagi!</br></string>

    <string name="latihan_mengeja">Latihan Mengeja Huruf</string>
    <string name="belajar_kata">Belajar Kata</string>
    <string name="developer">Develop by javEdu</string>
    <string name="or">or</string>
    <string name="latihan_mengeja_kata">Latihan Mengeja Kata</string>
    <string name="latihan_mengeja_huruf">Latihan Mengeja Huruf</string>
    <string name="progress">Progress</string>
    <string name="ilustrasiKata">ilustrasi</string>
    <string name="belum_tersedia">Sayangnya gambar ini belum tersedia :(</string>
    <string name="ayah">Ayah</string>

</resources>