<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_iv_green"
    tools:context=".ui.belajar.kata.KataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <!--    bagian putih-->
        <LinearLayout
            android:background="@drawable/bg_iv_white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <TextView
                android:text="@string/hasil_pencarian"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/kata"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!--    bagian scroll-->
        <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@drawable/bg_iv_yellow"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/kategori1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_kata_mudah"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:background="@drawable/bg_iv_pink"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/kategori2"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_kata_sedang"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:background="@drawable/bg_iv_blue"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="150dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/kategori3"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_kata_sulit"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_nav_bottom" />
    </LinearLayout>
</RelativeLayout>